--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "yiisoft/yii2": "~2.0"
     },
     "require-dev": {
+        "yiisoft/yii2-gii": "~2.0",
         "yiisoft/yii2-debug": "~2.0",
         "yiisoft/yii2-codeception": "~2.0",
         "yiisoft/yii2-faker": "~2.0"
