--- a/libraries/composer/composer.json
+++ b/libraries/composer/composer.json
@@ -19,6 +19,7 @@
         }
     },
     "extra": {
+        "class": "dee\\composer\\Plugin",
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
