--- a/libraries/composer/composer.json
+++ b/libraries/composer/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "yiisoft/yii2-composer": "~2.0"
+        "yiisoft/yii2-composer": "~2.0",
+        "composer-plugin-api": "1.0.0"
     },
     "autoload": {
         "psr-4": {
