--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "mdmsoft/yii2-autonumber": "~1.0",
         "mdmsoft/yii2-format-converter": "~1.0",
         "mdmsoft/yii2-ar-behaviors": "~1.0",
+        "mdmsoft/import": "~1.0",
         "bower-asset/admin-lte": "1.3.0",
         "bower-asset/angular": "~1.3.0",
         "bower-asset/angular-mocks": "~1.3.0",
