--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "mdmsoft/yii2-autonumber": "~1.0",
         "mdmsoft/yii2-format-converter": "~1.0",
         "mdmsoft/yii2-ar-behaviors": "~1.0",
-        "bower-asset/admin-lte": "1.3.0"
+        "almasaeed2010/adminlte": "1.3.0"
     },
     "require-dev": {
         "yiisoft/yii2-gii": "~2.0",
