--- a/composer.json
+++ b/composer.json
@@ -51,10 +51,11 @@
             "mdm\\gii\\": "libraries/gii",
             "dee\\easyui\\": "libraries/easyui",
             "dee\\console\\": "libraries/console",
+            "dee\\base\\": "libraries/base",
+            "dee\\rest\\": "libraries/rest",
             "biz\\api\\": "libraries/biz-api",
             "dee\\angular\\": "libraries/angular",
-            "dee\\adminlte\\": "libraries/adminlte",
-            "dee\\rest\\": "libraries/rest"
+            "dee\\adminlte\\": "libraries/adminlte"
         },
         "psr-0":{
             "libraries\\Bootstrap":""
