--- a/libraries/rest/composer.json
+++ b/libraries/rest/composer.json
@@ -1,27 +1,28 @@
 {
-	"name": "deesoft/yii2-rest",
-	"description": "Yii2 rest extension",
-	"keywords": ["yii2", "rest"],
-	"type": "yii2-extension",
-	"license": "BSD-3-Clause",
-	"support": {
-		"issues": "https://github.com/deesoft/yii2-rest/issues",
-		"source": "https://github.com/deesoft/yii2-rest"
-	},
-	"authors": [
-		{
-			"name": "Misbahul Munir",
-			"email": "misbahuldmunir@gmail.com"
-		}
-	],
-	"require": {
-		"yiisoft/yii2": "~2.0"
-	},
-	"autoload": {
-		"psr-4": {
-			"dee\\rest\\": ""
-		}
-	},
+    "name": "deesoft/yii2-rest",
+    "description": "Yii2 rest extension",
+    "keywords": ["yii2", "rest"],
+    "type": "yii2-extension",
+    "license": "BSD-3-Clause",
+    "support": {
+        "issues": "https://github.com/deesoft/yii2-rest/issues",
+        "source": "https://github.com/deesoft/yii2-rest"
+    },
+    "authors": [
+        {
+            "name": "Misbahul Munir",
+            "email": "misbahuldmunir@gmail.com"
+        }
+    ],
+    "require": {
+        "yiisoft/yii2": "~2.0",
+        "deesoft/yii2-base": "~1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "dee\\rest\\": ""
+        }
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
