--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,10 @@
         },
         "branch-alias": {
             "dev-master": "1.0.x-dev"
+        },
+        "symlinks": {
+            "application/vendor": "vendor",
+            "init": "application/init"
         }
     }
 }
