--- a/libraries/composer/composer.json
+++ b/libraries/composer/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "composer-plugin-api": "1.0.0",
-        "yiisoft/yii2-composer": "~2.0"
+        "composer-plugin-api": "1.0.0"
     },
     "autoload": {
         "psr-4": {
