--- a/libraries/rest-base/composer.json
+++ b/libraries/rest-base/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "deesoft/yii2-angular",
-    "description": "Yii2 angular extension",
-    "keywords": ["yii2", "angularjs"],
+    "name": "deesoft/yii2-rest-base",
+    "description": "Yii2 rest extension",
+    "keywords": ["yii2", "rest"],
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/deesoft/yii2-angular/issues",
-        "source": "https://github.com/deesoft/yii2-angular"
+        "issues": "https://github.com/deesoft/yii2-rest/issues",
+        "source": "https://github.com/deesoft/yii2-rest"
     },
     "authors": [
         {
@@ -15,16 +15,16 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "~2.0.0",
+        "yiisoft/yii2": "~2.0",
+        "deesoft/yii2-base": "~1.0",
         "deesoft/yii2-rest": "~1.0"
     },
     "autoload": {
         "psr-4": {
-            "dee\\angular\\": ""
+            "dee\\rest\\base\\": ""
         }
     },
     "extra": {
-        "bootstrap": "dee\\angular\\Bootstrap",
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
