--- a/libraries/rest/composer.json
+++ b/libraries/rest/composer.json
@@ -15,8 +15,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "~2.0",
-        "deesoft/yii2-base": "~1.0"
+        "yiisoft/yii2": "~2.0"
     },
     "autoload": {
         "psr-4": {
