another way using bootstrap

--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,9 @@
         }
     },
     "extra": {
-        "bootstrap": "libraries\\Bootstrap",
+        "bootstrap": [
+            "dee\\angular\\Bootstrap"
+        ],
         "asset-installer-paths": {
             "npm-asset-library": "vendor/npm",
             "bower-asset-library": "vendor/bower"
