--- a/composer.json
+++ b/composer.json
@@ -29,18 +29,24 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0",
         "yiisoft/yii2-jui": "~2.0",
-        "deesoft/yii2-composer": "~1.0",
+        "yiisoft/yii2-bootstrap": "~2.0",
         "mdmsoft/yii2-admin": "~1.0",
         "mdmsoft/yii2-autonumber": "~1.0",
         "mdmsoft/yii2-format-converter": "~1.0",
         "mdmsoft/yii2-ar-behaviors": "~1.0",
+        "deesoft/yii2-composer": "~1.0",
+        "deesoft/yii2-console": "~1.0",
+        "deesoft/yii2-angular": "~1.0",
+        "deesoft/yii2-rest": "~1.0",
+        "deesoft/yii2-rest-base": "~1.0",
+        "deesoft/yii2-base": "~1.0",
+        "deesoft/yii2-easyui": "~1.0",
         "almasaeed2010/adminlte": "1.3.0"
     },
     "require-dev": {
+        "deesoft/yii2-gii": "~1.0",
         "yiisoft/yii2-gii": "~2.0",
-        "yiisoft/yii2-debug": "~2.0",
-        "yiisoft/yii2-codeception": "~2.0",
-        "yiisoft/yii2-faker": "~2.0"
+        "yiisoft/yii2-debug": "~2.0"
     },
     "suggest": {
         "codeception/codeception": "Codeception, 1.8.*@dev is currently works well with Yii.",
@@ -61,9 +67,6 @@
             "dee\\angular\\": "libraries/angular",
             "dee\\adminlte\\": "libraries/adminlte",
             "biz\\api\\": "libraries/biz-api"
-        },
-        "psr-0":{
-            "libraries\\Bootstrap":""
         }
     },
     "extra": {
