--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,8 @@
         },
         "symlinks": {
             "application/vendor": "vendor",
-            "init": "application/init"
+            "init": "application/init",
+            "yii": "application/yii"
         }
     }
 }
