--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
         "deesoft/yii2-rest-base": "~1.0",
         "deesoft/yii2-base": "~1.0",
         "deesoft/yii2-easyui": "~1.0",
-        "almasaeed2010/adminlte": "1.3.0"
+        "almasaeed2010/adminlte": "1.3.0",
+        "components/font-awesome": "4.3.0",
+        "driftyco/ionicons": "1.5.2"
     },
     "require-dev": {
         "deesoft/yii2-gii": "~1.0",
