--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,8 @@
         "deesoft/yii2-rest": "~1.0",
         "deesoft/yii2-rest-base": "~1.0",
         "deesoft/yii2-base": "~1.0",
-        "almasaeed2010/adminlte": "~2.0",
-        "rmrevin/yii2-fontawesome": "2.9.2"
+        "bower-asset/AdminLTE": "~2.0",
+        "rmrevin/yii2-fontawesome": "~2.0"
     },
     "require-dev": {
         "deesoft/yii2-gii": "~1.0",
