--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "deesoft/yii2-rest": "self.version",
         "deesoft/yii2-rest-base": "self.version",
         "deesoft/yii2-base": "self.version",
-        "deesoft/yii2-easyui": "self.version"
+        "deesoft/yii2-easyui": "self.version",
+        "deesoft/biz3-api": "self.version",
+        "deesoft/biz3-client": "self.version"
     },
     "require": {
         "php": ">=5.4.0",
