--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "deesoft/yii2-rest": "~1.0",
         "deesoft/yii2-rest-base": "~1.0",
         "deesoft/yii2-base": "~1.0",
+        "deesoft/yii2-adminlte": "~1.0",
         "bower-asset/AdminLTE": "~2.0",
         "rmrevin/yii2-fontawesome": "~2.0"
     },
