Squashed 'libraries/gii/' changes from e5440ea..7f335f2
7f335f2 fix angular generator
69b1fcb fix version
ec8a1e0 :grinning:
25e22ab :grinning:
737d6fd move angular generator to "deesoft/yii2-gii"
6e6dda6 move angular generator to "deesoft/yii2-gii"
ce535fe more simple gii
a92217e gii
c8c242c add migration generator
adcf477 
8cd3b7a readme

git-subtree-dir: libraries/gii
git-subtree-split: 7f335f279e6a712c224438f5d8e43f47ed97dc37

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-	"name": "mdmsoft/yii2-gii",
+	"name": "deesoft/yii2-gii",
 	"description": "Yii2 custom generator for gii",
 	"keywords": ["yii2", "gii"],
 	"type": "yii2-extension",
 	"license": "BSD-3-Clause",
 	"support": {
-		"issues": "https://github.com/mdmsoft/yii2-gii/issues",
-		"source": "https://github.com/mdmsoft/yii2-gii"
+		"issues": "https://github.com/deesoft/yii2-gii/issues",
+		"source": "https://github.com/deesoft/yii2-gii"
 	},
 	"authors": [
 		{
@@ -20,12 +20,12 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"mdm\\gii\\": ""
+			"dee\\gii\\": ""
 		}
 	},
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.1.x-dev"
         }
     }
 }
