--- a/libraries/rest/composer.json
+++ b/libraries/rest/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "~2.0.4",
+        "yiisoft/yii2": ">=2.0.4",
         "deesoft/yii2-base": "~1.0"
     },
     "autoload": {
@@ -25,7 +25,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.x-dev"
         }
     }
 }
