Experimental. New version of angular widget

--- a/composer.json
+++ b/composer.json
@@ -45,10 +45,10 @@
         "deesoft/yii2-adminlte": "~1.0",
         "bower-asset/AdminLTE": "~2.0",
         "rmrevin/yii2-fontawesome": "~2.0",
-        "bower-asset/angular": "~1.3.0",
-        "bower-asset/angular-route": "~1.3.0",
-        "bower-asset/angular-resource": "~1.3.0",
-        "bower-asset/angular-bootstrap": "~0.13.1"
+        "bower-asset/angular": "~1.3",
+        "bower-asset/angular-route": "~1.3",
+        "bower-asset/angular-resource": "~1.3",
+        "bower-asset/angular-bootstrap": "~0.13"
     },
     "require-dev": {
         "deesoft/yii2-gii": "~1.0",
@@ -73,6 +73,7 @@
             "dee\\rest\\base\\": "libraries/rest-base",
             "dee\\angular\\": "libraries/angular",
             "dee\\adminlte\\": "libraries/adminlte",
+            "dee\\admin\\": "libraries/admin",
             "biz\\api\\": "libraries/biz-api",
             "biz\\client\\": "libraries/biz-client"
         }
