--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "deesoft/yii2-adminlte": "*",
         "deesoft/biz3-api": "*",
         "deesoft/biz3-client": "*",
-        "mdmsoft/yii2-admin": "*"
+        "mdmsoft/yii2-admin": "~3.0"
     },
     "require": {
         "php": ">=5.4.0",
