--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "bower-asset/angular-resource": "~1.3",
         "bower-asset/angular-animate": "~1.3",
         "bower-asset/angular-bootstrap": "~0.13",
-        "bower-asset/angular-validation": "~1.3"
+        "bower-asset/angular-validation": "~1.3",
+        "bower-asset/angular-ui-router": "~0.2"
     },
     "require-dev": {
         "deesoft/yii2-gii": "~1.0",
