--- a/libraries/angular/composer.json
+++ b/libraries/angular/composer.json
@@ -20,7 +20,8 @@
         "bower-asset/angular-route": "~1.3",
         "bower-asset/angular-resource": "~1.3",
         "bower-asset/angular-bootstrap": "~0.13",
-        "bower-asset/angular-validation": "~1.3"
+        "bower-asset/angular-validation": "~1.3",
+        "bower-asset/angular-ui-router": "~0.2"
     },
     "autoload": {
         "psr-4": {
